# claudette

./: .travis.yml  CMakeLists.txt  README  README.md  readme.txt
doc/: Doxyfile
doc/html/: annotated.html  box_bld_cpp-source.html  box_bld_cpp.html  box_cpp-source.html  box_cpp.html  box_h-source.html  box_h.html  class_Box-members.html  class_Box.html  class_BoxTreeInnerNode-members.html  class_BoxTreeInnerNode.html  class_BoxTreeNode-members.html  class_BoxTreeNode.html  class_BoxedTriangle-members.html  class_BoxedTriangle.html  class_Check-members.html  class_Check.html  class_CollisionModel3D-members.html  class_CollisionModel3D.html  class_CollisionModel3DImpl-members.html  class_CollisionModel3DImpl.html  class_Inconsistency.html  class_RotationState-members.html  class_RotationState.html  class_TimeoutExpired.html  class_Triangle-members.html  class_Triangle.html  class_TriangleDesc-members.html  class_TriangleDesc.html  coldet_bld_cpp-source.html  coldet_bld_cpp.html  coldet_cpp-source.html  coldet_cpp.html  coldet_dsp-source.html  coldet_dsp.html  coldet_h-source.html  coldet_h.html  coldetimpl_h-source.html  coldetimpl_h.html  doxygen.css  (+29 more)
scripts/: travis-build.sh
src/: base_collision_test.cpp  base_collision_test.h  box.cpp  box.h  box_bld.cpp  coldet.cpp  coldet.h  coldet_bld.cpp  coldet_impl.cpp  coldet_impl.h  coldetimpl.h  collision_model_3d.cpp  collision_model_3d.h  global.h  makefile.g++  math3d.cpp  math3d.h  model_collision_test.cpp  model_collision_test.h  model_collision_test_p.h  mytritri.cpp  mytritri.h  ray_collision_test.cpp  ray_collision_test.h  ray_collision_test_p.h  sphere_collision_test.cpp  sphere_collision_test.h  sphere_collision_test_p.h  sysdep.cpp  sysdep.h  tritri.c
